--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 <body>
-<head>
-<title>
+  <h1>All About Me</h1>
+  <title>This Is My Website</title>
 <p>
-<link>
-<a href…>
+  I am Sarah Wee, a student studying in Dunman High School and I am in year 1. </p>
+  <a href="www.dhs.sg">Dunman High School</a>
+<p>
+  These are the things I love to do</p>    
 <ul>
-<li>
-<img src>
-<h1>, <h2>
+  <li>Reading books</li>
+    <a href="  https://www.goodreads.com/">Book Recommendation Website</a>
+  <li>Solving puzzles</li>
+   <a href="http://www.fitbrains.com/blog/friday-fun-brain-teasers">Brain Teasers</a>
+  <li>Night cycling</li>
+  </ul>
+<img src="photo.jpg"/>>
+  </body>
+  </html>
